# first-rpc

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  conanfile.py  deps.ps1  deps.sh  install.ps1  install.sh  install_systemd_service.sh  run_server.sh  rust_build.ps1  rust_build.sh  smoke_test.ps1  smoke_test.sh  uninstall_systemd_service.sh
doc/: code-structure.md
include/first_rpc/client/: request_args.hpp  rpc_client.hpp
include/first_rpc/common/: exec_utils.hpp  file_ops.hpp  format.hpp  system_utils.hpp
include/first_rpc/server/: service_impl.hpp
proto/: first_rpc.proto
rust/: Cargo.toml  build.rs  build.sh  rust_build.ps1  rust_build.sh  smoke_test.ps1  smoke_test.sh  smoke_test_rust.ps1  smoke_test_rust.sh
rust/src/: cli.rs  lib.rs  ops.rs
src/client/: main.cpp  rpc_client.cpp
src/common/: exec_utils.cpp  file_ops.cpp  format.cpp  system_utils.cpp
src/server/: main.cpp  service_impl.cpp
systemd/: first-rpc.env.example  first-rpc.service.template
tests/cpp/: exec_service_tests.cpp  file_ops_tests.cpp  format_tests.cpp  upload_service_tests.cpp
