[package]
name = "first-rpc-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hostname = "0.4"
prost = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-prost-build = "0.14"

[[bin]]
name = "first_rpc_server_rust"
path = "src/bin/first_rpc_server_rust.rs"

[[bin]]
name = "first_rpc_client_rust"
path = "src/bin/first_rpc_client_rust.rs"
